# book-list

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.bash  compile-deps.bash  create-book.http  docker-compose.yaml  input.json  local-config.yaml  sql-models.sql
src/: data_models.rs  log.rs  main.rs  middleware.rs  service.rs
