[package]
name = "book-list"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.9.0"
opentelemetry-prometheus = "0.10.0"
prometheus = "0.13.1"
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
serde_json = "1.0"
serde_yaml = "0.8.24"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
r2d2_postgres = "0.18.1"